--- a/css/main.css
+++ b/css/main.css
@@ -7,17 +7,17 @@
 
 @font-face {
   font-family: Poppins-Regular;
-  src: url('../fonts/poppins/Poppins-Regular.ttf'); 
+  src: url('../fonts/poppins/Poppins-Regular.ttf');
 }
 
 @font-face {
   font-family: Poppins-Medium;
-  src: url('../fonts/poppins/Poppins-Medium.ttf'); 
+  src: url('../fonts/poppins/Poppins-Medium.ttf');
 }
 
 @font-face {
   font-family: Poppins-Bold;
-  src: url('../fonts/poppins/Poppins-Bold.ttf'); 
+  src: url('../fonts/poppins/Poppins-Bold.ttf');
 }
 
 
@@ -27,8 +27,8 @@
 [ RESTYLE TAG ]*/
 
 * {
-	margin: 0px; 
-	padding: 0px; 
+	margin: 0px;
+	padding: 0px;
 	box-sizing: border-box;
 }
 
@@ -126,14 +126,21 @@ iframe {
 /*//////////////////////////////////////////////////////////////////
 [ Contact 2 ]*/
 .bg-contact3 {
-  width: 100%;  
+  width: 100%;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
 }
 
+.container-bg-contact3 {
+  display: flex;
+  flex-wrap: wrap;
+  background: rgba(255,255,255,0.8);
+
+}
+
 .container-contact3 {
-  width: 100%;  
+  width: 100%;
   min-height: 100vh;
   display: -webkit-box;
   display: -webkit-flex;
@@ -144,8 +151,6 @@ iframe {
   justify-content: center;
   align-items: center;
   padding: 15px;
-  background: rgba(255,255,255,0.8);
-  
 }
 
 .wrap-contact3 {
@@ -277,11 +282,6 @@ textarea.input3 {
   border-radius: 2px;
   position: relative;
   z-index: 1;
-  background: #80c64a;
-  background: -webkit-linear-gradient(-135deg, #56ab2f, #a8e063);
-  background: -o-linear-gradient(-135deg, #56ab2f, #a8e063);
-  background: -moz-linear-gradient(-135deg, #56ab2f, #a8e063);
-  background: linear-gradient(-135deg, #56ab2f, #a8e063);
 
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
@@ -308,7 +308,6 @@ textarea.input3 {
 }
 
 .contact3-form-btn:hover {
-  color: #fff;
 }
 
 .contact3-form-btn:hover:before {
@@ -448,9 +447,9 @@ textarea.input3 {
   border-radius: 50%;
   border: 6px solid transparent;
   background: rgba(255,255,255,0.5);
-  -moz-background-clip: padding;     
-  -webkit-background-clip: padding;  
-  background-clip: padding-box; 
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding;
+  background-clip: padding-box;
   left: 0;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -530,7 +529,7 @@ textarea.input3 {
 .select2-selection__arrow::before {
   content: '';
   display: block;
-  
+
   border-right: 5px solid transparent;
   border-left: 5px solid transparent;
   border-bottom: 5px solid #e6e6e6;
@@ -540,7 +539,7 @@ textarea.input3 {
 .select2-selection__arrow::after {
   content: '';
   display: block;
-  
+
   border-right: 5px solid transparent;
   border-left: 5px solid transparent;
   border-top: 5px solid #e6e6e6;
@@ -593,8 +592,3 @@ textarea.input3 {
   color: #555555;
   line-height: 1.2;
 }
-
-
-
-
-
