--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,10 @@
 }
 
 
+.row{
+  margin-left: 0px; !important
+  margin-right: 0px; !important
+}
 
 
 /*//////////////////////////////////////////////////////////////////
@@ -149,17 +153,18 @@ iframe {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   padding: 15px;
+  padding-right: 40px;
 }
 
 .wrap-contact3 {
   width: 500px;
   background: #80c64a;
-  background: -webkit-linear-gradient(45deg, #56ab2f, #a8e063);
-  background: -o-linear-gradient(45deg, #56ab2f, #a8e063);
-  background: -moz-linear-gradient(45deg, #56ab2f, #a8e063);
-  background: linear-gradient(45deg, #56ab2f, #a8e063);
+  background: -webkit-linear-gradient(45deg, #6c1d41, #ba3170);
+  background: -o-linear-gradient(45deg, #6c1d41, #ba3170);
+  background: -moz-linear-gradient(45deg, #6c1d41, #ba3170);
+  background: linear-gradient(45deg, #6c1d41, #ba3170);
   border-radius: 10px;
   overflow: hidden;
   padding: 72px 55px 65px 55px;
@@ -173,6 +178,16 @@ iframe {
   width: 100%;
 }
 
+.contact-title {
+  display: block;
+  font-family: Poppins-Bold;
+  font-size: 39px;
+  line-height: 1.2;
+  text-align: center;
+  padding-bottom: 30px;
+  text-transform: uppercase;
+}
+
 .contact3-form-title {
   display: block;
   font-family: Poppins-Bold;
@@ -181,7 +196,8 @@ iframe {
   line-height: 1.2;
   text-align: center;
   text-transform: uppercase;
-  padding-bottom: 70px;
+  padding-bottom: 30px;
+  padding-top: 10px;
 }
 
 
@@ -259,7 +275,6 @@ textarea.input3 {
 /*------------------------------------------------------------------
 [  ]*/
 .container-contact3-form-btn {
-  padding-top: 23px;
 }
 
 .contact3-form-btn {
@@ -299,7 +314,6 @@ textarea.input3 {
   height: 100%;
   top: 0;
   left: 0;
-  background: #fff;
   opacity: 1;
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
@@ -337,7 +351,7 @@ textarea.input3 {
   position: absolute;
   max-width: 70%;
   background-color: #fff;
-  border: 1px solid #c80000;
+  border: 1px solid #000;
   border-radius: 2px;
   padding: 4px 25px 4px 10px;
   top: 50%;
@@ -350,18 +364,13 @@ textarea.input3 {
   pointer-events: none;
 
   font-family: Poppins-Regular;
-  color: #c80000;
+  color: #000;
   font-size: 13px;
   line-height: 1.4;
   text-align: left;
 
   visibility: hidden;
   opacity: 0;
-
-  -webkit-transition: opacity 0.4s;
-  -o-transition: opacity 0.4s;
-  -moz-transition: opacity 0.4s;
-  transition: opacity 0.4s;
 }
 
 .alert-validate::after {
@@ -369,7 +378,7 @@ textarea.input3 {
   font-family: FontAwesome;
   display: block;
   position: absolute;
-  color: #c80000;
+  color: #fff;
   font-size: 16px;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -561,19 +570,19 @@ textarea.input3 {
 
 .select2-container .select2-results__option[aria-selected="true"] {
   background: #80c64a;
-  background: -webkit-linear-gradient(45deg, #56ab2f, #a8e063);
-  background: -o-linear-gradient(45deg, #56ab2f, #a8e063);
-  background: -moz-linear-gradient(45deg, #56ab2f, #a8e063);
-  background: linear-gradient(45deg, #56ab2f, #a8e063);
+  background: -webkit-linear-gradient(45deg, #6c1d41, #ba3170);
+  background: -o-linear-gradient(45deg, #6c1d41, #ba3170);
+  background: -moz-linear-gradient(45deg, #6c1d41, #ba3170);
+  background: linear-gradient(45deg, #6c1d41, #ba3170);
   color: white;
 }
 
 .select2-container .select2-results__option--highlighted[aria-selected] {
   background: #80c64a;
-  background: -webkit-linear-gradient(45deg, #56ab2f, #a8e063);
-  background: -o-linear-gradient(45deg, #56ab2f, #a8e063);
-  background: -moz-linear-gradient(45deg, #56ab2f, #a8e063);
-  background: linear-gradient(45deg, #56ab2f, #a8e063);
+  background: -webkit-linear-gradient(45deg, #6c1d41, #ba3170);
+  background: -o-linear-gradient(45deg, #6c1d41, #ba3170);
+  background: -moz-linear-gradient(45deg, #6c1d41, #ba3170);
+  background: linear-gradient(45deg, #6c1d41, #ba3170);
   color: white;
 }
 
