--- a/css/main.css
+++ b/css/main.css
@@ -200,6 +200,18 @@ iframe {
   padding-top: 10px;
 }
 
+.card-title-custom {
+  display: block;
+  font-family: Poppins-Bold;
+  font-size: 39px;
+  color: #000;
+  line-height: 1.2;
+  text-align: center;
+  text-transform: uppercase;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 
 
 /*------------------------------------------------------------------
